--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header class="hombre-header">
+    <header class="index-header  ">
         <div class="index-header-flex  ">
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
