--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -11,7 +11,7 @@
 
 
     <title>KAZEOVER</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
