--- a/pages/mujer.html
+++ b/pages/mujer.html
@@ -9,8 +9,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-    <title>KAZEOVER</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>MUJER</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
