--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -9,9 +9,8 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
-
-    <title>KAZEOVER</title>
     <link rel="stylesheet" href="../css/style.css">
+    <title>Hombre</title>
 </head>
 
 <body>
@@ -20,7 +19,7 @@
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
                 <div class="container-fluid  ">
-                    <a class="navbar-brand" href="/index.html">KAZEOVER</a>
+                    <a class="navbar-brand" href="../index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
