--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -59,7 +59,7 @@
 
 
         <!-- Contenedor de los productos -->
-        <div class="d-flex contenedor-men flex-wrap align-items-center h-100">
+        <div class="d-flex contenedor-men flex-wrap h-100">
 
             <!-- PRIMERA CARD -->
 
@@ -72,7 +72,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -90,7 +90,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Ame la Nuit</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -108,7 +108,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Blessed Angel</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -126,7 +126,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Tokyo Forest</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -142,7 +142,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">New York Yankees</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -158,7 +158,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Grow the Game</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -175,7 +175,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">Wise Moves</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -191,7 +191,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">1Million People</h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -207,7 +207,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -224,25 +224,7 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
-                        </div>
-
-                    </div>
-                    <p><span>$ 30</span></p>
-                </div>
-            </div>
-
-
-            <div class="w-50 img-card p-1">
-                <div>
-                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
-                </div>
-
-                <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
-                        <h3 class="fs-6">World Vision </h3>
-                        <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
@@ -260,7 +242,25 @@
                     <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
-                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
+                    </div>
+                    <p><span>$ 30</span></p>
+                </div>
+            </div>
+
+
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="../img/corazon.png" alt="corazón" width="30px" height="30px">
                         </div>
 
                     </div>
