--- a/pages/hombre.html
+++ b/pages/hombre.html
@@ -18,7 +18,7 @@
         <div class="index-header-flex  ">
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
-                
+
                 <div class="container-fluid  ">
                     <a class="navbar-brand" href="../index.html">KAZEOVER</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -58,7 +58,7 @@
 
 
         <!-- Contenedor de los productos -->
-        <div class="d-flex contenedor-men flex-wrap align-items-center h-100">
+        <div class="d-flex contenedor-men flex-wrap h-100">
 
             <!-- PRIMERA CARD -->
 
@@ -171,7 +171,7 @@
                     <img class="card-img w-100" src="../img/carrusel2index.jpg" alt="remeranegra">
                 </div>
                 <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                    <div class="d-flex justify-content-between">
                         <h3 class="fs-6">Wise Moves</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
@@ -187,7 +187,7 @@
                     <img class="card-img w-100" src="../img/card-oversize-index1.jpg" alt="remeranegra">
                 </div>
                 <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                    <div class="d-flex flex-nowrap  justify-content-between">
                         <h3 class="fs-6">1Million People</h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
@@ -203,7 +203,7 @@
                 </div>
 
                 <div class="card-info m-3">
-                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                    <div class="d-flex flex-nowrap justify-content-between">
                         <h3 class="fs-6">World Vision </h3>
                         <div class="position-relative ">
                             <img src="../img/corazon.png" alt="corazon" width="30px" height="30px">
